Fix spacing on buttons

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,9 @@ h1 {
 }
 
 button {
+    margin-left:2em;
+    margin-top:0.5em;
+    margin-bottom:0.5em;
   border-radius: 3em;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
